kstyle: Create pixmaps with explicit devicePixelRatio

Otherwise Qt takes the qApp devicePixelRatio which can be integer
or wrong in case of multi-monitor.

BUG: 471388